Added CDN links for matlab examples

--- a/_posts/matlab/bar/2015-04-09-bar_matlab_index.html
+++ b/_posts/matlab/bar/2015-04-09-bar_matlab_index.html
@@ -4,7 +4,7 @@ name: Bar Charts
 permalink: matlab/bar-charts/
 description: How to make a bar chart in MATLAB. Seven examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
-thumbnail: /images/bar.png
+thumbnail: thumbnail/bar.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
