--- a/_posts/matlab/box/2015-04-09-box_matlab_index.html
+++ b/_posts/matlab/box/2015-04-09-box_matlab_index.html
@@ -4,7 +4,7 @@ name: Box Plots
 permalink: matlab/box-plots/
 description: How to make a box plot in MATLAB. Seven examples of box plots in MATLAB that are grouped, colored, and display the underlying data distribution.
 layout: base
-thumbnail: /images/box.png
+thumbnail: thumbnail/box.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
