--- a/_posts/matlab/callbacks-dropdowns/2015-04-09-dropdowns_index.html
+++ b/_posts/matlab/callbacks-dropdowns/2015-04-09-dropdowns_index.html
@@ -4,7 +4,7 @@ name: Dropdown Events
 permalink: matlab/dropdowns
 description: How to add dropdowns to Python charts with JavaScript. 
 layout: base
-thumbnail: /images/dropdown.png
+thumbnail: thumbnail/dropdown.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
