--- a/_posts/matlab/callbacks-sliders/2015-04-09-sliders_index.html
+++ b/_posts/matlab/callbacks-sliders/2015-04-09-sliders_index.html
@@ -4,7 +4,7 @@ name: Adding Sliders to Charts
 permalink: matlab/range-slider/
 description: How to add sliders to Python charts with JavaScript 
 layout: base
-thumbnail: /images/sliders.png
+thumbnail: thumbnail/sliders.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
