--- a/_posts/matlab/fft/2015-04-09-fft_matlab_index.html
+++ b/_posts/matlab/fft/2015-04-09-fft_matlab_index.html
@@ -4,7 +4,7 @@ name: Fast Fourier Transform
 permalink: matlab/fft/
 description: An example of FFT audio analysis in MATLAB and the fft function.
 layout: base
-thumbnail: /images/fft.png
+thumbnail: thumbnail/fft.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: false
