--- a/_posts/matlab/fileopt/2015-04-09-fileopt_matlab_index.html
+++ b/_posts/matlab/fileopt/2015-04-09-fileopt_matlab_index.html
@@ -4,7 +4,7 @@ name: Filenames, Folders, and Updating Plotly Graphs in MATLAB
 permalink: matlab/file-options/
 description: How to update Plotly graphs in MATLAB with the fileopt parameter.
 layout: base
-thumbnail: /images/fileopt.png
+thumbnail: thumbnail/fileopt.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: false
