--- a/_posts/matlab/insets/2015-04-09-insets_matlab_index.html
+++ b/_posts/matlab/insets/2015-04-09-insets_matlab_index.html
@@ -4,7 +4,7 @@ name: Inset Plots
 permalink: matlab/insets/
 description: How to make an inset graph in MATLAB.
 layout: base
-thumbnail: /images/insets.png
+thumbnail: thumbnail/insets.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
