--- a/_posts/matlab/latex/2015-04-09-latex_matlab_index.html
+++ b/_posts/matlab/latex/2015-04-09-latex_matlab_index.html
@@ -4,7 +4,7 @@ name: LaTeX
 permalink: matlab/LaTeX/
 description: How to add LaTeX to MATLAB graphs.
 layout: base
-thumbnail: /images/latex.png
+thumbnail: thumbnail/latex.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: false
