--- a/_posts/matlab/line_exclusive/2015-04-09-line_exclusive_matlab_index.html
+++ b/_posts/matlab/line_exclusive/2015-04-09-line_exclusive_matlab_index.html
@@ -4,7 +4,7 @@ name: plot | Line Charts
 permalink: matlab/plot/
 description: How to make a plot in MATLAB. Examples of the plot function, line and marker types, custom colors, and log and semi-log axes.
 layout: base
-thumbnail: /images/line_exclusive.png
+thumbnail: thumbnail/line_exclusive.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
