--- a/_posts/matlab/multiple-axes/2015-04-09-multiple-axes_matlab_index.html
+++ b/_posts/matlab/multiple-axes/2015-04-09-multiple-axes_matlab_index.html
@@ -4,7 +4,7 @@ name: Multiple Axes
 permalink: matlab/multiple-axes/
 description: How to make a graph with multiple axes in MATLAB.
 layout: base
-thumbnail: /images/multiple-axes.png
+thumbnail: thumbnail/multiple-axes.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
