--- a/_posts/matlab/scatter_exclusive/2015-04-09-scatter_exclusive_matlab_index.html
+++ b/_posts/matlab/scatter_exclusive/2015-04-09-scatter_exclusive_matlab_index.html
@@ -4,7 +4,7 @@ name: Scatter
 permalink: matlab/scatter/
 description: How to make a scatter plot in MATLAB. Seven examples of the scatter function.
 layout: base
-thumbnail: /images/scatter_exclusive.png
+thumbnail: thumbnail/scatter_exclusive.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
