--- a/_posts/matlab/sparse_matrix_graphs/2015-04-09-sparse_matrix_graphs_matlab_index.html
+++ b/_posts/matlab/sparse_matrix_graphs/2015-04-09-sparse_matrix_graphs_matlab_index.html
@@ -4,7 +4,7 @@ name: Sparse Matrix Visualizations
 permalink: matlab/spy/
 description: How to visualize sparse matrices in MATLAB. An example of the spy function.
 layout: base
-thumbnail: /images/sparse_matrix_graphs.png
+thumbnail: thumbnail/sparse_matrix_graphs.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
