--- a/_posts/matlab/stem-plots/2015-07-15-stem-plot-index.html
+++ b/_posts/matlab/stem-plots/2015-07-15-stem-plot-index.html
@@ -4,7 +4,7 @@ name: Stem Plot
 permalink: matlab/stem-plots/
 description: How to make stem plots in MATLAB.
 layout: base
-thumbnail: /images/stem-plot.png
+thumbnail: thumbnail/stem-plot.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
