--- a/_posts/matlab/stft/2015-04-09-stft_matlab_index.html
+++ b/_posts/matlab/stft/2015-04-09-stft_matlab_index.html
@@ -4,7 +4,7 @@ name: Short-Time Fourier Transform
 permalink: matlab/stft/
 description: An example of basic audio analysis with the STFT Spectrogram in MATLAB.
 layout: base
-thumbnail: /images/stft.png
+thumbnail: thumbnail/stft.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: false
