--- a/_posts/matlab/ternary-plots/2015-07-20-ternary-index.html
+++ b/_posts/matlab/ternary-plots/2015-07-20-ternary-index.html
@@ -4,7 +4,7 @@ name: Ternary Plots
 permalink: matlab/ternary-plots/
 description: How to make a ternary plot in MATLAB. A ternary plot shows changes over 3 axes.
 layout: base
-thumbnail: /images/ternary.png
+thumbnail: thumbnail/ternary.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
