--- a/_posts/matlab/treemap/2015-10-30-treemap-index.html
+++ b/_posts/matlab/treemap/2015-10-30-treemap-index.html
@@ -4,7 +4,7 @@ name: Treemaps
 permalink: matlab/treemap/
 description: How to make a Treemap plot in MATLAB using Treemaps and Plotly. Treemaps are used to visualize hierarchical data as nested rectangels.
 layout: base
-thumbnail: /images/treemap.png
+thumbnail: thumbnail/treemap.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
