--- a/_posts/matlab/3d-line/2015-04-09-3d-line_matlab_index.html
+++ b/_posts/matlab/3d-line/2015-04-09-3d-line_matlab_index.html
@@ -4,7 +4,7 @@ name: 3D Line Plots
 permalink: matlab/3d-line-plots/
 description: How to make 3D line plots in MATLAB.
 layout: base
-thumbnail: /images/3d-line.png
+thumbnail: thumbnail/3d-line.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
