--- a/_posts/matlab/3d-ribbon/2015-07-14-ribbon-index.html
+++ b/_posts/matlab/3d-ribbon/2015-07-14-ribbon-index.html
@@ -4,7 +4,7 @@ name: Ribbon Plots
 permalink: matlab/ribbon-plots/
 description: How to make ribbon plots in MATLAB.
 layout: base
-thumbnail: /images/ribbon-plot.png
+thumbnail: thumbnail/ribbon-plot.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
