--- a/_posts/matlab/3d-surface/2015-04-09-3d-surface_matlab_index.html
+++ b/_posts/matlab/3d-surface/2015-04-09-3d-surface_matlab_index.html
@@ -4,7 +4,7 @@ name: 3D Surface Plots
 permalink: matlab/3d-surface-plots/
 description: How to make 3D surface plots in MATLAB.
 layout: base
-thumbnail: /images/3d-surface.png
+thumbnail: thumbnail/3d-surface.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
