--- a/_posts/matlab/annotations/2015-04-09-annotations_matlab_index.html
+++ b/_posts/matlab/annotations/2015-04-09-annotations_matlab_index.html
@@ -4,7 +4,7 @@ name: Text and Annotations
 permalink: matlab/text-and-annotations/
 description: How to add text labels and annotations to plots in MATLAB.
 layout: base
-thumbnail: /images/annotations.png
+thumbnail: thumbnail/annotations.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: false
