--- a/_posts/matlab/area/2015-04-09-area_matlab_index.html
+++ b/_posts/matlab/area/2015-04-09-area_matlab_index.html
@@ -4,7 +4,7 @@ name: Filled Area Plots
 permalink: matlab/filled-area-plots/
 description: How to make a filled area plot in MATLAB. An area chart displays a solid color between the traces of a graph.
 layout: base
-thumbnail: /images/area.png
+thumbnail: thumbnail/area.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
