--- a/_posts/matlab/bubble/2015-04-09-bubble_matlab_index.html
+++ b/_posts/matlab/bubble/2015-04-09-bubble_matlab_index.html
@@ -4,7 +4,7 @@ name: Bubble Charts
 permalink: matlab/bubble-charts/
 description: How to make a bubble chart in MATLAB. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
-thumbnail: /images/bubble.png
+thumbnail: thumbnail/bubble.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
