--- a/_posts/matlab/contour/2015-04-09-contour_matlab_index.html
+++ b/_posts/matlab/contour/2015-04-09-contour_matlab_index.html
@@ -4,7 +4,7 @@ name: Contour Plots
 permalink: matlab/contour-plots/
 description: How to make a contour plot in MATLAB. Seven examples of contour plots of matrices with subplots, custom color-scales, and smoothing.
 layout: base
-thumbnail: /images/contour.png
+thumbnail: thumbnail/contour.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
