--- a/_posts/matlab/dashboard/2015-07-29-dashboard-index.html
+++ b/_posts/matlab/dashboard/2015-07-29-dashboard-index.html
@@ -3,9 +3,9 @@ title: MATLAB Dashboards
 name: Dashboards
 permalink: matlab/dashboard/
 description: Dashboard of charts created and updated in MATLAB, rendered with D3.js
-imageurl: https://plot.ly/gh-pages/documentation/static//images/dashboard.png
+imageurl: https://plot.ly/gh-pages/documentation/static/thumbnail/dashboard.jpg
 language: matlab
-thumbnail: /images/dashboard.png
+thumbnail: thumbnail/dashboard.jpg
 page_type: example_index
 has_thumbnail: true
 display_as: chart_type
