--- a/_posts/matlab/error-bar/2015-04-09-error-bar_matlab_index.html
+++ b/_posts/matlab/error-bar/2015-04-09-error-bar_matlab_index.html
@@ -4,7 +4,7 @@ name: Error Bars
 permalink: matlab/error-bars/
 description: How to add error bars to a line, scatter, or bar chart. Seven examples of symmetric, asymmetric, horizontal, and colored error bars.
 layout: base
-thumbnail: /images/error-bar.png
+thumbnail: thumbnail/error-bar.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
