--- a/_posts/matlab/font/2015-04-09-font_matlab_index.html
+++ b/_posts/matlab/font/2015-04-09-font_matlab_index.html
@@ -4,7 +4,7 @@ name: Text and Font Styling
 permalink: matlab/font/
 description: How to edit and style the font of graphs in MATLAB.
 layout: base
-thumbnail: /images/font.png
+thumbnail: thumbnail/font.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: false
