--- a/_posts/matlab/get-requests/2015-04-09-get-requests_matlab_index.html
+++ b/_posts/matlab/get-requests/2015-04-09-get-requests_matlab_index.html
@@ -4,7 +4,7 @@ name: Get Requests
 permalink: matlab/get-requests/
 description: How to download plotly users's public graphs and data with MATLAB.
 layout: base
-thumbnail: /images/get-requests.png
+thumbnail: thumbnail/get-requests.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: false
