--- a/_posts/matlab/heatmap/2015-04-09-heatmap_matlab_index.html
+++ b/_posts/matlab/heatmap/2015-04-09-heatmap_matlab_index.html
@@ -4,7 +4,7 @@ name: Heatmaps
 permalink: matlab/heatmaps/
 description: How to make a heatmap in MATLAB with a matrix. Seven examples of colored and labeled heatmaps with custom colorscales.
 layout: base
-thumbnail: /images/heatmap.png
+thumbnail: thumbnail/heatmap.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
