--- a/_posts/matlab/labels/2015-04-09-labels_matlab_index.html
+++ b/_posts/matlab/labels/2015-04-09-labels_matlab_index.html
@@ -4,7 +4,7 @@ name: Setting the Title, Legend Entries, and Axis Titles
 permalink: matlab/figure-labels/
 description: How to set the title, legend-entries, and axis-titles in MATLAB.
 layout: base
-thumbnail: /images/labels.png
+thumbnail: thumbnail/labels.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: false
