--- a/_posts/matlab/network_graphs/2015-04-09-network_graphs_matlab_index.html
+++ b/_posts/matlab/network_graphs/2015-04-09-network_graphs_matlab_index.html
@@ -4,7 +4,7 @@ name: Network Graphs
 permalink: matlab/network-graph/
 description: How to visualize a network with the adjacency matrix in MATLAB. An example of MATLAB's gplot function.
 layout: base
-thumbnail: /images/network_graphs.png
+thumbnail: thumbnail/network_graphs.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
