--- a/_posts/matlab/polar/2015-04-09-polar_matlab_index.html
+++ b/_posts/matlab/polar/2015-04-09-polar_matlab_index.html
@@ -4,7 +4,7 @@ name: Polar Charts
 permalink: matlab/polar-chart/
 description: How to graph polar charts in MATLAB. Seven examples of polar line, polar scatter and polar area charts.
 layout: base
-thumbnail: /images/polar.png
+thumbnail: thumbnail/polar.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
