--- a/_posts/matlab/privacy/2015-04-09-privacy_matlab_index.html
+++ b/_posts/matlab/privacy/2015-04-09-privacy_matlab_index.html
@@ -4,7 +4,7 @@ name: Public vs Private Graphs
 permalink: matlab/privacy/
 description: How to set the privacy settings of plotly graphs in MATLAB.
 layout: base
-thumbnail: /images/privacy.png
+thumbnail: thumbnail/privacy.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: false
