--- a/_posts/matlab/sizing/2015-04-09-sizing_matlab_index.html
+++ b/_posts/matlab/sizing/2015-04-09-sizing_matlab_index.html
@@ -4,7 +4,7 @@ name: Setting Graph Size
 permalink: matlab/setting-graph-size/
 description: How to change the size of graphs in MATLAB.
 layout: base
-thumbnail: /images/sizing.png
+thumbnail: thumbnail/sizing.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: false
