--- a/_posts/matlab/streamline/2015-07-20-streamline-index.html
+++ b/_posts/matlab/streamline/2015-07-20-streamline-index.html
@@ -4,7 +4,7 @@ name: Streamline Plots
 permalink: matlab/streamline-plots/
 description: How to make a streamline plot in MATLAB. A streamline plot displays vector field data.
 layout: base
-thumbnail: /images/streamline.png
+thumbnail: thumbnail/streamline.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
