--- a/_posts/matlab/subplots/2015-04-09-subplots_matlab_index.html
+++ b/_posts/matlab/subplots/2015-04-09-subplots_matlab_index.html
@@ -4,7 +4,7 @@ name: Subplots
 permalink: matlab/subplots/
 description: How to make subplots in MATLAB. Seven examples of stacked, custom-sized, and gridded subplots.
 layout: base
-thumbnail: /images/subplots.png
+thumbnail: thumbnail/subplots.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
