--- a/_posts/matlab/time-series/2015-04-09-time-series_matlab_index.html
+++ b/_posts/matlab/time-series/2015-04-09-time-series_matlab_index.html
@@ -4,7 +4,7 @@ name: Time Series
 permalink: matlab/time-series/
 description: How to plot date and time in MATLAB. An example of a time-series plot.
 layout: base
-thumbnail: /images/time-series.png
+thumbnail: thumbnail/time-series.jpg
 language: matlab
 page_type: example_index
 has_thumbnail: true
