--- a/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
@@ -76,7 +76,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                 <div class="row">
                   <a href="/python/user-guide/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Plotly Python User Guide" src="{{site.staticurl}}/images/ipython-img/1- ipython user guide.jpg" >
+                        <img class="thumbnail" alt="Plotly Python User Guide" src="{{site.imgurl}}thumbnail/ipython_1_user_guide.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Plotly Python User Guide</h5>
                         </div>
@@ -84,7 +84,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/subplots/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Python Subplots with Plotly and make_subplots" src="{{site.staticurl}}/images/ipython-img/2 - ipython subplots.png" >
+                        <img class="thumbnail" alt="Python Subplots with Plotly and make_subplots" src="{{site.imgurl}}thumbnail/ipython_2_subplots.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered"> Python Subplots with Plotly and make_subplots </h5>
                         </div>
@@ -102,7 +102,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   -->
                   <a href="https://plot.ly/ipython-notebooks/cufflinks/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Cufflinks - Easy Plotting using Plotly and Pandas" src="{{site.staticurl}}/images/ipython-img/4 - ipython cufflinks.png" >
+                        <img class="thumbnail" alt="Cufflinks - Easy Plotting using Plotly and Pandas" src="{{site.imgurl}}thumbnail/ipython_4_cufflinks.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Cufflinks - Easy Plotting using Plotly and Pandas</h5>
                         </div>
@@ -111,7 +111,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   <div class="three-column-clear"></div>
                   <a href="https://plot.ly//ipython-notebooks/collaboration/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Collaboration with Plotly using Python, R and MATLAB" src="{{site.staticurl}}/images/ipython-img/5 - ipython collaboration.png" >
+                        <img class="thumbnail" alt="Collaboration with Plotly using Python, R and MATLAB" src="{{site.imgurl}}thumbnail/ipython_5_collaboration.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Collaboration with Plotly using Python, R and MATLAB</h5>
                         </div>
@@ -148,7 +148,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/amazon-redshift/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Plotting Data from Your Redshift Data Warehouse" src="{{site.staticurl}}/images/ipython-img/9 - ipython redshift.png" >
+                        <img class="thumbnail" alt="Plotting Data from Your Redshift Data Warehouse" src="{{site.imgurl}}thumbnail/ipython_9_redshift.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Plotting Data from Your Redshift Data Warehouse</h5>
                         </div>
@@ -174,7 +174,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   -->
                   <a href="https://plot.ly/ipython-notebooks/salesforce/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Interactive graphing with Salesforce" src="{{site.staticurl}}/images/ipython-img/11 - ipython salesforce.png" >
+                        <img class="thumbnail" alt="Interactive graphing with Salesforce" src="{{site.imgurl}}thumbnail/ipython_11_salesforce.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Interactive Graphing with Salesforce</h5>
                         </div>
@@ -182,7 +182,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/graph-gmail-inbox-data/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Graph sales inbox statistics with IPython notebook" src="{{site.staticurl}}/images/ipython-img/12 - ipython graph email.png" >
+                        <img class="thumbnail" alt="Graph sales inbox statistics with IPython notebook" src="{{site.imgurl}}thumbnail/ipython_graph_email.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Graph Sales Inbox Statistics with IPython Notebook</h5>
                         </div>
@@ -194,7 +194,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                 <div class="row">
                   <a href="/ipython-notebooks/amazon-redshift/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Plotting Data from Your Redshift Data Warehouse" src="{{site.staticurl}}/images/ipython-img/9 - ipython redshift.png" >
+                        <img class="thumbnail" alt="Plotting Data from Your Redshift Data Warehouse" src="{{site.imgurl}}thumbnail/ipython_9_redshift.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Plotting Data from Your Redshift Data Warehouse</h5>
                         </div>
@@ -202,7 +202,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/apache-spark/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Plotting Spark Data Frames with Plotly" src="{{site.staticurl}}/images/ipython-img/13 - ipython apache spark.png" >
+                        <img class="thumbnail" alt="Plotting Spark Data Frames with Plotly" src="{{site.imgurl}}thumbnail/ipython_13_apache_spark.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Plotting Spark Data Frames with Plotly</h5>
                         </div>
@@ -210,7 +210,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/big-data-analytics-with-pandas-and-sqlite/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Big data analytics with Pandas and SQLite" src="{{site.staticurl}}/images/ipython-img/14 - ipython SQlite.png" >
+                        <img class="thumbnail" alt="Big data analytics with Pandas and SQLite" src="{{site.imgurl}}thumbnail/ipython_14_sqlite.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Big Data Analytics with Pandas and SQLite</h5>
                         </div>
@@ -232,7 +232,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/ukelectionbbg/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Plotting GBP/USD price action around UK general elections" src="{{site.staticurl}}/images/ipython-img/16 - ipython uk elections.png" >
+                        <img class="thumbnail" alt="Plotting GBP/USD price action around UK general elections" src="{{site.imgurl}}thumbnail/ipython_16_uk_election.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Plotting GBP/USD Price Action Around UK General Elections</h5>
                         </div>
@@ -240,7 +240,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/markowitz-portfolio-optimization/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Markowitz portfolio optimization" src="{{site.staticurl}}/images/ipython-img/16 - ipython portfolio optimization.png" >
+                        <img class="thumbnail" alt="Markowitz portfolio optimization" src="{{site.imgurl}}thumbnail/ipython_16_portfolio_optimization.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Markowitz Portfolio Optimization</h5>
                         </div>
@@ -251,7 +251,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/bioinformatics/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Visualizing biological data" src="{{site.staticurl}}/images/ipython-img/17 - ipython bioinformatics.png" >
+                        <img class="thumbnail" alt="Visualizing biological data" src="{{site.imgurl}}thumbnail/ipython_17_bioinformatics.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Visualizing Biological Data</h5>
                         </div>
@@ -259,7 +259,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/survival-analysis-r-vs-python/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Survival Analysis with Plotly: R vs Python" src="{{site.staticurl}}/images/ipython-img/18 - ipython survival analysis.png" >
+                        <img class="thumbnail" alt="Survival Analysis with Plotly: R vs Python" src="{{site.imgurl}}thumbnail/ipython_18_survival_analysis.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Survival Analysis with Plotly: R vs Python</h5>
                         </div>
@@ -267,7 +267,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/principal-component-analysis/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Principal Component Analysis in 3 Simple Steps" src="{{site.staticurl}}/images/ipython-img/19 - ipython component analysis.png" >
+                        <img class="thumbnail" alt="Principal Component Analysis in 3 Simple Steps" src="{{site.imgurl}}thumbnail/ipython_19_component_analysis.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Principal Component Analysis in 3 Simple Steps</h5>
                         </div>
@@ -279,7 +279,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/baltimore-vital-signs/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Baltimore Vital Signs" src="{{site.staticurl}}/images/ipython-img/20 - ipython baltimore.png" >
+                        <img class="thumbnail" alt="Baltimore Vital Signs" src="{{site.imgurl}}thumbnail/ipython_20_baltimore.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Baltimore Vital Signs</h5>
                         </div>
@@ -287,7 +287,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/cartodb/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Earthquake Magnitude with CartoDB and Plotly" src="{{site.staticurl}}/images/ipython-img/21 - ipython cartodb.png" >
+                        <img class="thumbnail" alt="Earthquake Magnitude with CartoDB and Plotly" src="{{site.imgurl}}thumbnail/ipython_21_cartodb.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Earthquake Magnitude with CartoDB and Plotly</h5>
                         </div>
@@ -305,7 +305,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   -->
                   <a href="/python/heatmaps-contours-and-2dhistograms-tutorial/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Analyzing Montreal's 2013 bikeshare data" src="{{site.staticurl}}/images/ipython-img/23 - ipython heatmap contours.png" >
+                        <img class="thumbnail" alt="Analyzing Montreal's 2013 bikeshare data" src="{{site.imgurl}}thumbnail/ipython_23_heatmap_contours.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Analyzing Montreal's 2013 Bikeshare Data</h5>
                         </div>
@@ -317,7 +317,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                 <div class="row">
                   <a href="https://plot.ly/matlab/aircraft-pitch-analysis-matlab-plotly/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Aircraft Pitch Analysis in MATLAB and Plotly" src="{{site.staticurl}}/images/ipython-img/24 - ipython aircraft pitch.png" >
+                        <img class="thumbnail" alt="Aircraft Pitch Analysis in MATLAB and Plotly" src="{{site.imgurl}}thumbnail/ipython_24_aircraft_pitch.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Aircraft Pitch Analysis in MATLAB and Plotly</h5>
                         </div>
@@ -325,7 +325,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/bicycle-control-design/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Bicycle Control Design with Python and Plotly" src="{{site.staticurl}}/images/ipython-img/28 - ipython bicycle.png" >
+                        <img class="thumbnail" alt="Bicycle Control Design with Python and Plotly" src="{{site.imgurl}}thumbnail/ipython_28_bicycle.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Bicycle Control Design with Python and Plotly</h5>
                         </div>
@@ -349,7 +349,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                 <div class="row">
                   <a href="/python/matplotlib-to-plotly-tutorial/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Plotly and matplotlib Conversion Cookbook" src="{{site.staticurl}}/images/ipython-img/26 - ipython matplotlib to plotly.png" >
+                        <img class="thumbnail" alt="Plotly and matplotlib Conversion Cookbook" src="{{site.imgurl}}thumbnail/ipython_26_matplotlib_to_plotly.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Plotly and matplotlib Conversion Cookbook</h5>
                         </div>
@@ -357,7 +357,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/subplots/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Python Subplots with Plotly and make_subplots" src="{{site.staticurl}}/images/ipython-img/2 - ipython subplots.png" >
+                        <img class="thumbnail" alt="Python Subplots with Plotly and make_subplots" src="{{site.imgurl}}thumbnail/ipython_2_subplots.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Python Subplots with Plotly and make_subplots</h5>
                         </div>
@@ -365,7 +365,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/basemap-maps/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Plotly maps with Matplotlib Basemap" src="{{site.staticurl}}/images/ipython-img/27 - ipython basemap.png" >
+                        <img class="thumbnail" alt="Plotly maps with Matplotlib Basemap" src="{{site.imgurl}}thumbnail/ipython_27_basemap.jpg" >
                         <div class="titlecenter">
                               <h5 class="centered">Plotly Maps with Matplotlib Basemap</h5>
                         </div>
