Added CDNs for Plotly JS, and matplotlib

--- a/_posts/matplotlib/fft/2015-04-09-fft_matplotlib_index.html
+++ b/_posts/matplotlib/fft/2015-04-09-fft_matplotlib_index.html
@@ -4,7 +4,7 @@ name: Fast Fourier Transform
 permalink: matplotlib/fft/
 description: An example of FFT audio analysis in matplotlib and the fft function.
 layout: base
-thumbnail: /images/fft.png
+thumbnail: thumbnail/fft.jpg
 language: matplotlib
 page_type: example_index
 has_thumbnail: false
