--- a/_posts/matplotlib/subplots/2015-04-09-subplots_matplotlib_index.html
+++ b/_posts/matplotlib/subplots/2015-04-09-subplots_matplotlib_index.html
@@ -4,7 +4,7 @@ name: Subplots
 permalink: matplotlib/subplots/
 description: How to make subplots in matplotlib. Seven examples of stacked, custom-sized, and gridded subplots.
 layout: base
-thumbnail: /images/subplots.png
+thumbnail: thumbnail/subplots.jpg
 language: matplotlib
 page_type: example_index
 has_thumbnail: true
