--- a/_posts/plotly_js/3d-cluster/2015-08-10-3d_point_cluster_index.html
+++ b/_posts/plotly_js/3d-cluster/2015-08-10-3d_point_cluster_index.html
@@ -4,7 +4,7 @@ name: 3D Cluster Graph
 permalink: javascript/3d-point-clustering/
 description: How to make a 3D Cluster Graph in JavaScript.
 layout: base
-thumbnail: /images/3d-clusters.png
+thumbnail: thumbnail/3d-clusters.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
