--- a/_posts/plotly_js/ajax-call/2015-08-10-ajax_call_plotly_js_index.html
+++ b/_posts/plotly_js/ajax-call/2015-08-10-ajax_call_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Read CSV Data from an Ajax Call
 permalink: javascript/ajax-call/
 description: How to make Ajax calls in javascript for Plotlyjs.
 layout: base
-thumbnail: /images/line-plots.png
+thumbnail: thumbnail/line-plots.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: false
