--- a/_posts/plotly_js/annotations/2015-04-09-annotations_plotly_js_index.html
+++ b/_posts/plotly_js/annotations/2015-04-09-annotations_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Text and Annotations
 permalink: javascript/text-and-annotations/
 description: How to add text labels and annotations to plots in javascript.
 layout: base
-thumbnail: /images/annotations.png
+thumbnail: thumbnail/annotations.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: false
