--- a/_posts/plotly_js/box/2015-04-09-box_plotly_js_index.html
+++ b/_posts/plotly_js/box/2015-04-09-box_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Box Plots
 permalink: javascript/box-plots/
 description: How to make a box plot in javascript. Seven examples of box plots in javascript that are grouped, colored, and display the underlying data distribution.
 layout: base
-thumbnail: /images/box.png
+thumbnail: thumbnail/box.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
