--- a/_posts/plotly_js/bubble-maps/2015-07-11-bubble_maps_plotlyjs_index.html
+++ b/_posts/plotly_js/bubble-maps/2015-07-11-bubble_maps_plotlyjs_index.html
@@ -4,7 +4,7 @@ name: Bubble Maps
 permalink: javascript/bubble-maps/
 description: How to make a bubble map in JavaScript. A bubble map overlays a bubble chart on a map.
 layout: base
-thumbnail: /images/bubble-map.png
+thumbnail: thumbnail/bubble-map.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
