--- a/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick_index.html
+++ b/_posts/plotly_js/candlestick-charts/2015-08-15-candlestick_index.html
@@ -4,7 +4,7 @@ name: Candlestick Charts
 permalink: javascript/candlestick-charts/
 description: How to graph candlestick charts in javascript. Examples of candlestick charts.
 layout: base
-thumbnail: /images/candlestick.png
+thumbnail: thumbnail/candlestick.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
