--- a/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth_plotly_js_index.html
+++ b/_posts/plotly_js/choropleth-maps/2015-07-11-choropleth_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Choropleth Maps
 permalink: javascript/choropleth-maps/
 description: How to make a choropleth map in JavaScript. A choropleth map shades geographic regions by value.
 layout: base
-thumbnail: /images/choropleth.png
+thumbnail: thumbnail/choropleth.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
