--- a/_posts/plotly_js/colorscales/2015-04-09-colorscales_plotlyjs_index.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-colorscales_plotlyjs_index.html
@@ -4,7 +4,7 @@ name: Heatmap and Contour Colorscales
 permalink: javascript/heatmap-and-contour-colorscales/
 description: How to set colorscales and heatmap colorscales in JavaScript and Plotly. Divergent, sequential, and qualitative colorscales.
 layout: base
-thumbnail: /images/colorbars.png
+thumbnail: thumbnail/colorbars.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
