--- a/_posts/plotly_js/font/2015-04-09-font_plotly_js_index.html
+++ b/_posts/plotly_js/font/2015-04-09-font_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Text and Font Styling
 permalink: javascript/font/
 description: How to edit and style the font of graphs in javascript.
 layout: base
-thumbnail: /images/font.png
+thumbnail: thumbnail/font.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: false
