--- a/_posts/plotly_js/histogram/2015-04-09-histogram_plotly_js_index.html
+++ b/_posts/plotly_js/histogram/2015-04-09-histogram_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Histograms
 permalink: javascript/histograms/
 description: How to make a histogram in JavaScript. Seven examples of colored, horizontal, and normal histogram bar charts.
 layout: base
-thumbnail: /images/histogram.png
+thumbnail: thumbnail/histogram.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
