--- a/_posts/plotly_js/histogram2d/2015-04-09-histogram2d_plotly_js_index.html
+++ b/_posts/plotly_js/histogram2d/2015-04-09-histogram2d_plotly_js_index.html
@@ -4,7 +4,7 @@ name: 2D Histograms
 permalink: javascript/2D-Histogram/
 description: How to make a 2D histogram in javascript. A 2D histogram is a visualization of a bivariate distribution.
 layout: base
-thumbnail: /images/histogram2d.png
+thumbnail: thumbnail/histogram2d.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
