--- a/_posts/plotly_js/horizontal-bar/2015-04-09-horizontal_bar_plotlyjs_index.html
+++ b/_posts/plotly_js/horizontal-bar/2015-04-09-horizontal_bar_plotlyjs_index.html
@@ -4,7 +4,7 @@ name: Horizontal Bar Charts
 permalink: javascript/horizontal-bar-charts/
 description: How to make a hortizontal bar chart in JavaScript.
 layout: base
-thumbnail: /images/horizontal-bar.png
+thumbnail: thumbnail/horizontal-bar.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
