--- a/_posts/plotly_js/hover/2015-10-08-hover_plotly_js_index.html
+++ b/_posts/plotly_js/hover/2015-10-08-hover_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Hover Text and Formatting
 permalink: javascript/hover-text-and-formatting/
 description: How to add hover text and format hover values in javascript.
 layout: base
-thumbnail: /images/annotations.png
+thumbnail: thumbnail/annotations.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: false
