--- a/_posts/plotly_js/insets/2015-04-09-insets_plotly_js_index.html
+++ b/_posts/plotly_js/insets/2015-04-09-insets_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Inset Plots
 permalink: javascript/insets/
 description: How to make an inset graph in javascript.
 layout: base
-thumbnail: /images/insets.png
+thumbnail: thumbnail/insets.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
