--- a/_posts/plotly_js/labels/2015-04-09-labels_plotly_js_index.html
+++ b/_posts/plotly_js/labels/2015-04-09-labels_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Setting the Title, Legend Entries, and Axis Titles
 permalink: javascript/figure-labels/
 description: How to set the title, legend-entries, and axis-titles in javascript.
 layout: base
-thumbnail: /images/labels.png
+thumbnail: thumbnail/labels.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: false
