--- a/_posts/plotly_js/latex/2015-04-09-latex_plotly_js_index.html
+++ b/_posts/plotly_js/latex/2015-04-09-latex_plotly_js_index.html
@@ -4,7 +4,7 @@ name: LaTeX
 permalink: javascript/LaTeX/
 description: How to add LaTeX to javascript graphs.
 layout: base
-thumbnail: /images/latex.png
+thumbnail: thumbnail/latex.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: false
