--- a/_posts/plotly_js/line-plots/2015-07-24-line-plots-index.html
+++ b/_posts/plotly_js/line-plots/2015-07-24-line-plots-index.html
@@ -4,7 +4,7 @@ name: Line Charts
 permalink: javascript/line-charts/
 description: How to make line charts in JavaScript.
 layout: base
-thumbnail: /images/line-plots.png
+thumbnail: thumbnail/line-plots.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
