--- a/_posts/plotly_js/mixed/2015-04-09-mixed_plotly_js_index.html
+++ b/_posts/plotly_js/mixed/2015-04-09-mixed_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Multiple Chart Types
 permalink: javascript/graphing-multiple-chart-types/
 description: How to makes figures with mixed chart types in JavaScript. Examples of a contour plot with a scatter plot and a bar chart with a line chart.
 layout: base
-thumbnail: /images/mixed.png
+thumbnail: thumbnail/mixed.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
