--- a/_posts/plotly_js/ohlc/2015-08-15-ohlc_index.html
+++ b/_posts/plotly_js/ohlc/2015-08-15-ohlc_index.html
@@ -4,7 +4,7 @@ name: OHLC Charts
 permalink: javascript/ohlc-charts/
 description: How to graph OHLC charts in javascript. Examples of OHCL charts.
 layout: base
-thumbnail: /images/ohlc.png
+thumbnail: thumbnail/ohlc.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
