--- a/_posts/plotly_js/pie/2015-08-10-pie_plotly_js_index.html
+++ b/_posts/plotly_js/pie/2015-08-10-pie_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Pie Charts
 permalink: javascript/pie-chart/
 description: How to graph pie charts in javascript. Examples of pie charts, donut charts and pie chart subplots.
 layout: base
-thumbnail: /images/pie-chart.png
+thumbnail: thumbnail/pie-chart.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
