--- a/_posts/plotly_js/polar/2015-04-09-polar_plotly_js_index.html
+++ b/_posts/plotly_js/polar/2015-04-09-polar_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Polar Charts
 permalink: javascript/polar-chart/
 description: How to graph polar charts in javascript. Seven examples of polar line, polar scatter and polar area charts.
 layout: base
-thumbnail: /images/polar-scatter.png
+thumbnail: thumbnail/polar-scatter.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
