--- a/_posts/plotly_js/remove-trace/2015-08-15-remove_trace_index.html
+++ b/_posts/plotly_js/remove-trace/2015-08-15-remove_trace_index.html
@@ -4,7 +4,7 @@ name: Remove Trace from Plot
 permalink: javascript/remove-trace/
 description: How to remove a trace from a plot in JavaScript.
 layout: base
-thumbnail: /images/remove-trace.png
+thumbnail: thumbnail/remove-trace.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
