--- a/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout_plotly_js_index.html
+++ b/_posts/plotly_js/responsive-fluid-layout/2015-10-20-responsive-fluid-layout_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Responsive / Fluid Layout
 permalink: javascript/responsive-fluid-layout/
 description: How to create a plot with a responsive layout in javascript.
 layout: base
-thumbnail: /images/fluid-layout.gif
+thumbnail: thumbnail/fluid-layout.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
