--- a/_posts/plotly_js/shapes/2015-06-19-shape_plotlyjs_index.html
+++ b/_posts/plotly_js/shapes/2015-06-19-shape_plotlyjs_index.html
@@ -4,7 +4,7 @@ name: Shapes
 permalink: javascript/shapes/
 description: How to make arbitrary SVG shapes in JavaScript. Examples of lines, circle, rectangle, and path.
 layout: base
-thumbnail: /images/shape.png
+thumbnail: thumbnail/shape.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
