--- a/_posts/plotly_js/subplots/2015-04-09-subplots_plotly_js_index.html
+++ b/_posts/plotly_js/subplots/2015-04-09-subplots_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Subplots
 permalink: javascript/subplots/
 description: How to make subplots in javascript. Seven examples of stacked, custom-sized, and gridded subplots.
 layout: base
-thumbnail: /images/subplots.png
+thumbnail: thumbnail/subplots.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
