--- a/_posts/plotly_js/wind-rose/2015-04-09-wind-rose_plotlyjs_index.html
+++ b/_posts/plotly_js/wind-rose/2015-04-09-wind-rose_plotlyjs_index.html
@@ -4,7 +4,7 @@ name: Wind Rose Charts
 permalink: javascript/wind-rose-charts/
 description: How to graph wind rose charts in JavaScript. 
 layout: base
-thumbnail: /images/wind-rose.png
+thumbnail: thumbnail/wind-rose.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
