--- a/_posts/matplotlib/bar/2015-04-09-bar_matplotlib_index.html
+++ b/_posts/matplotlib/bar/2015-04-09-bar_matplotlib_index.html
@@ -4,7 +4,7 @@ name: Bar Charts
 permalink: matplotlib/bar-charts/
 description: How to make a bar chart in matplotlib. Seven examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
-thumbnail: /images/bar.png
+thumbnail: thumbnail/bar.jpg
 language: matplotlib
 page_type: example_index
 has_thumbnail: true
