--- a/_posts/matplotlib/bubble/2015-04-09-bubble_matplotlib_index.html
+++ b/_posts/matplotlib/bubble/2015-04-09-bubble_matplotlib_index.html
@@ -4,7 +4,7 @@ name: Bubble Charts
 permalink: matplotlib/bubble-charts/
 description: How to make a bubble chart in matplotlib. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
-thumbnail: /images/bubble.png
+thumbnail: thumbnail/bubble.jpg
 language: matplotlib
 page_type: example_index
 has_thumbnail: true
