--- a/_posts/matplotlib/histogram/2015-04-09-histogram_matplotlib_index.html
+++ b/_posts/matplotlib/histogram/2015-04-09-histogram_matplotlib_index.html
@@ -4,7 +4,7 @@ name: Histograms
 permalink: matplotlib/histograms/
 description: How to make a histogram in matplotlib. Seven examples of colored, horizontal, and normal histogram bar charts.
 layout: base
-thumbnail: /images/histogram.png
+thumbnail: thumbnail/histogram.jpg
 language: matplotlib
 page_type: example_index
 has_thumbnail: true
