--- a/_posts/matplotlib/line_exclusive/2015-04-09-line_exclusive_matplotlib_index.html
+++ b/_posts/matplotlib/line_exclusive/2015-04-09-line_exclusive_matplotlib_index.html
@@ -4,7 +4,7 @@ name: plot | Line Charts
 permalink: matplotlib/plot/
 description: How to make a plot in matplotlib. Examples of the plot function, line and marker types, custom colors, and log and semi-log axes.
 layout: base
-thumbnail: /images/line_exclusive.png
+thumbnail: thumbnail/line_exclusive.jpg
 language: matplotlib
 page_type: example_index
 has_thumbnail: true
