--- a/_posts/plotly_js/3d-surface/2015-04-09-3d-surface_plotly_js_index.html
+++ b/_posts/plotly_js/3d-surface/2015-04-09-3d-surface_plotly_js_index.html
@@ -4,7 +4,7 @@ name: 3D Surface Plots
 permalink: javascript/3d-surface-plots/
 description: How to make 3D surface plots in javascript.
 layout: base
-thumbnail: /images/3d-surface.png
+thumbnail: thumbnail/3d-surface.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
