--- a/_posts/plotly_js/axes/2015-04-09-axes_plotly_js_index.html
+++ b/_posts/plotly_js/axes/2015-04-09-axes_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Axes
 permalink: javascript/axes/
 description: How to adjust axes properties in javascript. Seven examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.
 layout: base
-thumbnail: /images/axes.png
+thumbnail: thumbnail/axes.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: false
