--- a/_posts/plotly_js/bar/2015-04-09-bar_plotly_js_index.html
+++ b/_posts/plotly_js/bar/2015-04-09-bar_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Bar Charts
 permalink: javascript/bar-charts/
 description: How to make a bar chart in javascript. Seven examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
-thumbnail: /images/bar.png
+thumbnail: thumbnail/bar.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
