--- a/_posts/plotly_js/bubble/2015-04-09-bubble_plotly_js_index.html
+++ b/_posts/plotly_js/bubble/2015-04-09-bubble_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Bubble Charts
 permalink: javascript/bubble-charts/
 description: How to make a bubble chart in javascript. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
-thumbnail: /images/bubble.png
+thumbnail: thumbnail/bubble.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
