--- a/_posts/plotly_js/callbacks-buttons/2015-04-09-buttons_index.html
+++ b/_posts/plotly_js/callbacks-buttons/2015-04-09-buttons_index.html
@@ -4,7 +4,7 @@ name: Button Events
 permalink: javascript/custom-buttons/
 description: How to bind callback functions to custom buttons in JavaScript charts. 
 layout: base
-thumbnail: /images/custom-buttons.png
+thumbnail: thumbnail/custom-buttons.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
