--- a/_posts/plotly_js/callbacks-click/2015-04-09-click_index.html
+++ b/_posts/plotly_js/callbacks-click/2015-04-09-click_index.html
@@ -4,7 +4,7 @@ name: Click Events
 permalink: javascript/click-events/
 description: How to bind callback functions to click events in JavaScript charts. 
 layout: base
-thumbnail: /images/click.png
+thumbnail: thumbnail/click.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
