--- a/_posts/plotly_js/callbacks-dropdowns/2015-04-09-dropdowns_index.html
+++ b/_posts/plotly_js/callbacks-dropdowns/2015-04-09-dropdowns_index.html
@@ -4,7 +4,7 @@ name: Dropdown Events
 permalink: javascript/high-dimension-data/
 description: How to bind callback functions to custom dropdowns in JavaScript charts.
 layout: base
-thumbnail: /images/dropdown.png
+thumbnail: thumbnail/dropdown.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
