--- a/_posts/plotly_js/callbacks-hover/2015-04-09-hover_index.html
+++ b/_posts/plotly_js/callbacks-hover/2015-04-09-hover_index.html
@@ -4,7 +4,7 @@ name: Hover Events
 permalink: javascript/hover-events/
 description: How to bind callback functions to hover events in JavaScript charts. 
 layout: base
-thumbnail: /images/hover.png
+thumbnail: thumbnail/hover.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
