--- a/_posts/plotly_js/callbacks-sliders/2015-04-09-sliders_index.html
+++ b/_posts/plotly_js/callbacks-sliders/2015-04-09-sliders_index.html
@@ -4,7 +4,7 @@ name: Slider Events
 permalink: javascript/range-slider/
 description: How to bind callback functions to custom dropdowns in JavaScript charts.
 layout: base
-thumbnail: /images/sliders.png
+thumbnail: thumbnail/sliders.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
