--- a/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom_index.html
+++ b/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom_index.html
@@ -4,7 +4,7 @@ name: Zoom Events
 permalink: javascript/zoom-events/
 description: How to bind callback functions to zoom events in JavaScript charts. 
 layout: base
-thumbnail: /images/zoom.png
+thumbnail: thumbnail/zoom.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
