--- a/_posts/plotly_js/contour/2015-04-09-contour_plotly_js_index.html
+++ b/_posts/plotly_js/contour/2015-04-09-contour_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Contour Plots
 permalink: javascript/contour-plots/
 description: How to make a contour plot in {{ page.language }}. Examples of contour plots of matrices with subplots, custom color-scales, and smoothing.
 layout: base
-thumbnail: /images/contour.png
+thumbnail: thumbnail/contour.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
