--- a/_posts/plotly_js/density-plots/2015-04-09-density-plots-index.html
+++ b/_posts/plotly_js/density-plots/2015-04-09-density-plots-index.html
@@ -4,7 +4,7 @@ name: 2d Density Plots
 permalink: javascript/2d-density-plots/
 description: How to make a 2d density plot in JavaScript. Examples of density plots with kernel density estimations, custom color-scales, and smoothing.
 layout: base
-thumbnail: /images/2d-density-plot.png
+thumbnail: thumbnail/2d-density-plot.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
