--- a/_posts/plotly_js/heatmap/2015-04-09-heatmap_plotly_js_index.html
+++ b/_posts/plotly_js/heatmap/2015-04-09-heatmap_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Heatmaps
 permalink: javascript/heatmaps/
 description: How to make a heatmap in javascript with a matrix. Seven examples of colored and labeled heatmaps with custom colorscales.
 layout: base
-thumbnail: /images/heatmap.png
+thumbnail: thumbnail/heatmap.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
