--- a/_posts/plotly_js/line_and_scatter/2015-04-09-line_and_scatter_plotly_js_index.html
+++ b/_posts/plotly_js/line_and_scatter/2015-04-09-line_and_scatter_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Scatter Plots
 permalink: javascript/line-and-scatter/
 description: How to make line and scatter plots in JavaScript. Examples of basic and colored line and scatter plots.
 layout: base
-thumbnail: /images/line_and_scatter.png
+thumbnail: thumbnail/line-and-scatter.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
