--- a/_posts/plotly_js/multiple-axes/2015-04-09-multiple-axes_plotly_js_index.html
+++ b/_posts/plotly_js/multiple-axes/2015-04-09-multiple-axes_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Multiple Axes
 permalink: javascript/multiple-axes/
 description: How to make a graph with multiple axes in javascript.
 layout: base
-thumbnail: /images/multiple-axes.png
+thumbnail: thumbnail/multiple-axes.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
