--- a/_posts/plotly_js/ribbon-plots/2015-08-12-ribbon-plot-index.html
+++ b/_posts/plotly_js/ribbon-plots/2015-08-12-ribbon-plot-index.html
@@ -4,7 +4,7 @@ name: Ribbon Plots
 permalink: javascript/ribbon-plots/
 description: How to make a ribbon plot in JavaScript.
 layout: base
-thumbnail: /images/ribbon-plot.png
+thumbnail: thumbnail/ribbon-plot.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
