--- a/_posts/plotly_js/sizing/2015-04-09-sizing_plotly_js_index.html
+++ b/_posts/plotly_js/sizing/2015-04-09-sizing_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Setting Graph Size
 permalink: javascript/setting-graph-size/
 description: How to change the size of graphs in javascript.
 layout: base
-thumbnail: /images/sizing.png
+thumbnail: thumbnail/sizing.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: false
