--- a/_posts/plotly_js/time-series/2015-04-09-time-series_plotly_js_index.html
+++ b/_posts/plotly_js/time-series/2015-04-09-time-series_plotly_js_index.html
@@ -4,7 +4,7 @@ name: Time Series
 permalink: javascript/time-series/
 description: How to plot date and time in javascript. An example of a time-series plot.
 layout: base
-thumbnail: /images/time-series.png
+thumbnail: thumbnail/time-series.jpg
 language: plotly_js
 page_type: example_index
 has_thumbnail: true
