Added CDN links for dashboard index page

--- a/_posts/2015-08-20-dashboard-index.html
+++ b/_posts/2015-08-20-dashboard-index.html
@@ -32,7 +32,7 @@ layout: langindex
 
 <a href="/dashboards/sales/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Sales Dashboard" src="{{site.staticurl}}/images/multiple-axes.png">
+    <img class="thumbnail" alt="Sales Dashboard" src="{{site.imgurl}}thumbnail/multiple-axes.jpg">
       <div class="titlecenter" style="background:#a6cee3">
         <h5 class="centered" style="color:black;">Sales Dashboard</h5>
       </div>
@@ -41,7 +41,7 @@ layout: langindex
 
 <a href="/dashboards/insurance/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Scatter Plots" src="{{site.staticurl}}/images/ipython-img/16 - ipython portfolio optimization.png">
+    <img class="thumbnail" alt="Scatter Plots" src="{{site.imgurl}}thumbnail/ipython_16_portfolio_optimization.jpg">
       <div class="titlecenter" style="background:#1f78b4">
         <h5 class="centered" style="color:white;">Insurance Dashboard</h5>
       </div>
@@ -50,7 +50,7 @@ layout: langindex
 
 <a href="/dashboards/energy-monitoring/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Bar Charts" src="{{site.staticurl}}/images/ipython-img/19 - ipython component analysis.png">
+    <img class="thumbnail" alt="Bar Charts" src="{{site.imgurl}}thumbnail/ipython_19_component_analysis.jpg">
       <div class="titlecenter" style="background:#b2df8a">
         <h5 class="centered" style="color:black;">Energy Use Dashboard</h5>
       </div>
@@ -59,7 +59,7 @@ layout: langindex
 
 <a href="/dashboards/weather/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Horizontal Bar Charts" src="{{site.staticurl}}/images/wind-rose.png">
+    <img class="thumbnail" alt="Horizontal Bar Charts" src="{{site.imgurl}}thumbnail/wind-rose.jpg">
       <div class="titlecenter" style="background:rgb(31,158,137)">
         <h5 class="centered" style="color:white;">Weather Dashboard</h5>
       </div>
@@ -73,7 +73,7 @@ layout: langindex
 
 <a href="/dashboards/marketing-and-web-analytics-dashboard/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Bubble Charts" src="{{site.staticurl}}/images/bubble.png">
+    <img class="thumbnail" alt="Bubble Charts" src="{{site.imgurl}}thumbnail/bubble.jpg">
       <div class="titlecenter" style="background:#fb9a99">
         <h5 class="centered" style="color:black;">Marketing and Web Analytics Dashboard</h5>
       </div>
@@ -82,7 +82,7 @@ layout: langindex
 
 <a href="/dashboards/iot-rasberry-pi/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Time Series" src="{{site.staticurl}}/images/rel_strength.png">
+    <img class="thumbnail" alt="Time Series" src="{{site.imgurl}}thumbnail/rel_strength.jpg">
       <div class="titlecenter" style="background:#CC0000">
         <h5 class="centered" style="color:white;">Rasberry Pi IoT Dashboard </h5>
       </div>
@@ -91,7 +91,7 @@ layout: langindex
 
 <a href="/dashboards/manufacturing-spc/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Error Bars" src="{{site.staticurl}}/images/box-plots.png">
+    <img class="thumbnail" alt="Error Bars" src="{{site.imgurl}}thumbnail/box-plots.jpg">
       <div class="titlecenter" style="background:#fdbf6f">
         <h5 class="centered" style="color:black;"> Manufacturing SPC Dashboard </h5>
       </div>
@@ -185,7 +185,7 @@ layout: langindex
 
 <a href="/python/dashboard/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Python Dashboard" src="{{site.staticurl}}/images/python-small.png">
+    <img class="thumbnail" alt="Python Dashboard" src="{{site.imgurl}}thumbnail/python-small.jpg">
       <div class="titlecenter" style="background:#a6cee3">
         <h5 class="centered" style="color:black;">Python Dashboard</h5>
       </div>
@@ -194,7 +194,7 @@ layout: langindex
 
 <a href="/r/dashboard/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Scatter Plots" src="{{site.staticurl}}/images/r-small.png">
+    <img class="thumbnail" alt="Scatter Plots" src="{{site.imgurl}}thumbnail/r-small.jpg">
       <div class="titlecenter" style="background:#1f78b4">
         <h5 class="centered" style="color:white;">R Dashboard</h5>
       </div>
@@ -203,7 +203,7 @@ layout: langindex
 
 <a href="/matlab/dashboard/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Bar Charts" src="{{site.staticurl}}/images/MATLAB-small.png">
+    <img class="thumbnail" alt="Bar Charts" src="{{site.imgurl}}thumbnail/MATLAB-small.jpg">
       <div class="titlecenter" style="background:#b2df8a">
         <h5 class="centered" style="color:black;">MATLAB Dashboard</h5>
       </div>
