use image cdn for background image

--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -37,7 +37,7 @@ redirect_from: /javascript-graphing-library/
 <body>
 
 <div id="header" style="
-  background-image: url('https://s3-us-west-1.amazonaws.com/plotly-tutorials/excel/plotlyjs/plotlyjs-banner-background.png');
+  background-image: url('http://images.plot.ly/excel/plotlyjs/plotlyjs-banner-background.png');
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
