--- a/_posts/python/heatmap/2015-06-30-annotated_heatmap.html
+++ b/_posts/python/heatmap/2015-06-30-annotated_heatmap.html
@@ -3,7 +3,7 @@ permalink: python/annotated_heatmap
 description: How to make Annotated Heatmaps in Python with Plotly.
 title: Python Annotated Heatmaps | plotly
 has_thumbnail: true
-thumbnail: /images/ann_heat.png
+thumbnail: /images/annheat.png
 layout: user-guide
 name: Annotated Heatmaps
 language: python
@@ -433,7 +433,7 @@ order: 13
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>For more info on heatmaps, see: <a href="https://plot.ly/python/reference/#heatmap">https://plot.ly/python/reference/#heatmap</a>.<br> For more info about annotated_heatmaps, see:</p>
+<p>For more info on heatmaps, see: <a href="https://plot.ly/python/reference/#heatmap">https://plot.ly/python/reference/#heatmap</a>.<br> For more info on annotated_heatmaps, see:</p>
 </div>
 </div>
 </div>
