--- a/_posts/python/annotated-heatmap/2015-06-30-annotated_heatmap.html
+++ b/_posts/python/annotated-heatmap/2015-06-30-annotated_heatmap.html
@@ -1,9 +1,9 @@
 ---
 permalink: python/annotated_heatmap
-description: How to make Annotated Heatmaps in Python with Plotly.
+description: How to make Annotated Heatmaps in Python with Plotly
 title: Python Annotated Heatmaps | plotly
 has_thumbnail: true
-thumbnail: thumbnail/heatmap.jpg
+thumbnail: thumbnail/annheat.jpg
 layout: user-guide
 name: Annotated Heatmaps
 language: python
