--- a/_posts/python/network/2015-06-30-networkx.html
+++ b/_posts/python/network/2015-06-30-networkx.html
@@ -1,6 +1,6 @@
 ---
 permalink: python/network-graphs
-description: How to make Network Graphs in Python with Plotly. One examples of a network graph with NetworkX
+description: How to make Network Graphs in Python with Plotly. One example of a network graph with NetworkX
 title: Python Network Graphs | plotly
 has_thumbnail: true
 thumbnail: thumbnail/net.jpg
