add chord diagram, change thumbnail image path for table/heatmap

--- a/_posts/python/table/2015-06-30-table.html
+++ b/_posts/python/table/2015-06-30-table.html
@@ -3,14 +3,14 @@ permalink: python/table
 description: How to make Tables in Python with Plotly.
 title: Python Tables | plotly
 has_thumbnail: true
-thumbnail: /images/tab.png
+thumbnail: thumbnail/table.jpg
 layout: user-guide
 name: Tables
 language: python
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 31
+order: 32
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
