--- a/_posts/python/annotated-heatmap/2015-06-30-annotated_heatmap.html
+++ b/_posts/python/annotated-heatmap/2015-06-30-annotated_heatmap.html
@@ -3,7 +3,7 @@ permalink: python/annotated_heatmap
 description: How to make Annotated Heatmaps in Python with Plotly
 title: Python Annotated Heatmaps | plotly
 has_thumbnail: true
-thumbnail: annheat.png
+thumbnail: thumbnail/ann_heat.jpg
 layout: user-guide
 name: Annotated Heatmaps
 language: python
