Fix a small typo.
I think that this should read:

"Now you can pass .... either **or** the ...", not "either **on** the...".

--- a/_posts/plotly_js/getting-started/2015-07-21-plotlyjs-getting-started.html
+++ b/_posts/plotly_js/getting-started/2015-07-21-plotlyjs-getting-started.html
@@ -72,7 +72,7 @@ redirect_from: javascript-graphing-library/getting-started/
 &lt;/script&gt;</code></pre>
 
             <p>
-                Now you can pass Plotly.plot() either the ID of the DIV ("tester") on the DIV DOM element (<code class="no-padding">TESTER</code>).
+                Now you can pass Plotly.plot() either the ID of the DIV ("tester") or the DIV DOM element (<code class="no-padding">TESTER</code>).
             </p>
 
         </div>
