Updated Thumbnails for python and MATLAB

--- a/_posts/2015-08-20-dashboard-index.html
+++ b/_posts/2015-08-20-dashboard-index.html
@@ -185,7 +185,7 @@ layout: langindex
 
 <a href="/python/dashboard/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Python Dashboard" src="{{site.imgurl}}thumbnail/python-small.jpg">
+    <img class="thumbnail" alt="Python Dashboard" src="{{site.imgurl}}thumbnail/python_small.jpg">
       <div class="titlecenter" style="background:#a6cee3">
         <h5 class="centered" style="color:black;">Python Dashboard</h5>
       </div>
@@ -203,7 +203,7 @@ layout: langindex
 
 <a href="/matlab/dashboard/">
   <div class="alltutcol">
-    <img class="thumbnail" alt="Bar Charts" src="{{site.imgurl}}thumbnail/MATLAB-small.jpg">
+    <img class="thumbnail" alt="Bar Charts" src="{{site.imgurl}}thumbnail/MATLAB_small.jpg">
       <div class="titlecenter" style="background:#b2df8a">
         <h5 class="centered" style="color:black;">MATLAB Dashboard</h5>
       </div>
