--- a/_posts/dashboards/2015-08-20-energy.html
+++ b/_posts/dashboards/2015-08-20-energy.html
@@ -20,17 +20,7 @@ report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5820
 
 <div class="container-fluid">
 
-  <blockquote class="blockquote-reverse" style="margin:40px 0px">
-    <p>"Data scientists and software engineers working in Python, JavaScript and R thoroughly<br>
-    enjoy bringing Sighten's growing dataset to life through plotly charts -<br>
-    providing powerful insights to a variety of companies across the<br>
-    solar energy and finance industries."</p>
-    <footer>David, VP of Engineering at <cite title="Source Title">Sighten</cite></footer>
-  </blockquote>
-
-  {% include dashboard-industries-intro.html %}
-
-  <h2>Household Electricity Usage</h2>
+  <h2>Household Electricity Use</h2>
 
   <div class="row">
     <div class="col-sm-8">
@@ -54,7 +44,7 @@ report_link: https://plot.ly/~Dreamshot/folder/Dreamshot:5820
     <div class="col-sm-4">
       <div class="chart-wrapper">
         <div class="chart-title">
-          Electricity Usage & Temperature
+          Electricity Use & Temperature
         </div>
         <div class="chart-stage">
                     <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/12215.embed?link=false&modebar=false"></iframe>
