Fixed zoom events for plotly_js

--- a/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom-bind.html
+++ b/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom-bind.html
@@ -1,68 +1,25 @@
 ---
 name: Binding to Zoom Events
-plot_url: https://codepen.io/plotly/embed/mJaLmp/?height=700&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/dogexw/?height=530&theme-id=15263&default-tab=result
 language: plotly_js
 suite: zoom-events
 sitemap: false
 order: 0
 arrangement: horizontal
 ---
-var plot = document.getElementById('plot').contentWindow;
-var plotTwo = document.getElementById('plotTwo').contentWindow;
+var N = 40,
+    x = Plotly.d3.range(N),
+    y = Plotly.d3.range(N).map( Plotly.d3.random.normal() ),
+    data = [ { x:x, y:y } ];
+    layout = { title:'Click-drag to zoom' };
 
-document.getElementById('plot').onload = function() {
-	pinger = setInterval(function(){
-    	plot.postMessage({task: 'ping'}, 'https://plot.ly')
-	}, 100);
-};
+Plotly.plot('myDiv', data, layout);
 
-window.addEventListener('message', function(e) {
-    var message = e.data;
-    if(message.pong) {
-        console.log('Initial pong, frame is ready to receive');
-        clearInterval(pinger);
-        // Listening for zoom events, but you can also listen
-        // for click and hover by adding them to the array
-        plot.postMessage( {
-                task: 'listen',
-                events: ['zoom']
-            }, 'https://plot.ly');
-		 	plotTwo.postMessage({
-            task: 'relayout',
-            'update': {
-					'xaxis.fixedrange': true,
-					'yaxis.fixedrange': true
-				},
-        }, 'https://plot.ly');
-    }
-	 else if( message.type == 'zoom' ){
-		 console.log('zoom', message);
-		 drawRectangle( message['ranges'] );
-	 }
-    else {
-        console.log(message);
-    }
-});
-
-function drawRectangle( ranges ){
-    var rect = {
-		'type': 'rect',
-		'x0': ranges['x'][0],
-		'y0': ranges['y'][0],
-		'x1': ranges['x'][1],
-		'y1': ranges['y'][1],
-		'fillcolor': 'rgba(128, 0, 128, 0.7)',
-	}
-	plotTwo.postMessage({
-		'task': 'relayout',
-		'update': { shapes: [rect] },
-   }, 'https://plot.ly');
-}
-
-function newPlot(){
-	var plotURL = document.getElementById('plotURL').value + '.embed';
-	var iframe = document.getElementById('plot');
-	iframe.src = plotURL;
-	var iframeTwo = document.getElementById('plotTwo');
-	iframeTwo.src = plotURL;
-}
+$('#'+"myDiv").bind('plotly_relayout',
+    function(event,eventdata){  
+        alert( 'ZOOM!' + '\n\n' +
+            'Event data:' + '\n' + 
+             JSON.stringify(eventdata) + '\n\n' +
+            'x-axis start:' + eventdata['xaxis.range[0]'] + '\n' +
+            'x-axis end:' + eventdata['xaxis.range[1]'] );
+    });
